# wenet_trt8

./: .gitignore  .gitmodules  Benchmark.md  DataPrepare.md  NoneOpt.sh  README.md  build.sh  build_decoder.sh  build_encoder.sh  build_ort.sh  build_other.sh  build_plugin.sh  build_ppq.sh  fix2pass.py  fix_decoder.py  fix_encoder.py  fix_quant_model.py  model_info.py  onnx2trt.py  onnx_opt.py  onnx_qant.py  onnxsim.py  prepare_dataset.py  prepare_dataset.sh  replace_decoder_attn.py  replace_encoder_attn.py  set_env.sh  testEncoderAndDecoder.py  报告.md
datasets/: configs.json  data.list  prepare_dataset.py  test_data.list  train.yaml
other_branch/quant_ppq/: data.py  decoder_quant.py  encoder_fix.py  encoder_quant.py  model_dynamic.py  replace_decoder_ln.py  replace_encoder_ln.py
profile/: profile-in2-out5.py  profile-in3-out7.py
project2022/: build.sh  buildEngine.py  clean  main.py  ploy_cmd.sh
project2022/LayerNorm/: LayerNormPlugin.cu  LayerNormPlugin.h  Makefile  testLayerNormPlugin.py
project2022/SkipLayerNorm/: Makefile  bertCommon.h  checkMacrosPlugin.h  skipLayerNormKernel.cu  skipLayerNormPlugin.cpp  skipLayerNormPlugin.h
wenet/: configs.json  export_onnx.py  mqbench_use.py  openppq_use.py
wenet/wenet/transformer/: attention.py  convolution.py  embedding.py  subsampling.py
wenet/wenet/utils/: mask.py
wenet_plugin/: CMakeLists.txt  sample.py
wenet_plugin/plugin/: AttnMaskedSoftmax.cu  AttnMaskedSoftmax.h  LayerNormPlugin.cu  LayerNormPlugin.h  MHAPlugin.cu  MHAPlugin.h  utils.cu  utils.h
wenet_plugin/plugin/ft_utils/: AttentionINT8Weight.h  AttentionWeight.h  CMakeLists.txt  allocator.h  bfloat16_fallback_kenrels.cuh  cublasAlgoMap.cc  cublasAlgoMap.h  cublasINT8MMWrapper.h  cublasMMWrapper.cc  cublasMMWrapper.h  cuda_utils.h  logger.h  memory_utils.cu  memory_utils.h
wenet_repo/: rec_engine.sh  rec_onnx.sh  work_dir
wenet_repo/examples/aishell/s0/: export_onnx_gpu.py  only-test.sh  only-wer.sh  recognize_engine.py  recognize_onnx.py  run.sh  test-engine.sh  test-onnx.sh
wenet_repo/examples/aishell/s0/20210204_conformer_exp/: train.yaml
wenet_repo/examples/aishell/s0/20210204_conformer_exp/test_attention/: text  wer
wenet_repo/examples/aishell/s0/20210204_conformer_exp/test_attention_rescoring/: text  wer
wenet_repo/examples/aishell/s0/20210204_conformer_exp/test_ctc_greedy_search/: text  wer
wenet_repo/examples/aishell/s0/20210204_conformer_exp/test_ctc_prefix_beam_search/: text  wer
wenet_repo/examples/aishell/s0/data/dev/: data.list  text
wenet_repo/examples/aishell/s0/data/local/dev/: transcripts.txt  utt.list  wav.flist  wav.scp  wav.scp_all
wenet_repo/examples/aishell/s0/data/local/test/: text  utt.list  wav.flist  wav.scp  wav.scp_all
wenet_repo/examples/aishell/s0/data/local/train/: utt.list
wenet_repo/examples/aishell/s0/data/test/: data.list  text
wenet_repo/examples/aishell/s0/data/train/: global_cmvn
wenet_repo/examples/aishell/s0/onnx_export/: config.yaml  onnx_result.wer
wenet_repo/examples/aishell/s0/ppq/: orin_onnx
wenet_repo/examples/aishell/s0/ppq/jupyter/: fix-encoder.ipynb
wenet_repo/examples/aishell/s0/ppq/python/: dataloader.py  dynamic.py  ppq_run.py
wenet_repo/examples/aishell/s0/ppq/quant_onnx/: 解除conv量化.ipynb
wenet_repo/examples/aishell/s0/result/attention_rescoring/: text  wer
wenet_repo/examples/aishell/s0/shell/: cal_result.sh  only-test.sh  set_env.sh  test-engine.sh  test-engine1.sh  test-engine2.sh  test-onnx.sh  test-pt.sh  test-torch.sh
wenet_repo/examples/aishell/s0/tensorboard/: events.out.tfevents.1655475236.y9000p
wenet_repo/wenet/transformer/: subsampling.py
